# KKFileManager

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  prefsconfig  remakesourcelist
KKFileManager/: flagsandlibs  sources
KKFileManager/app/: Makefile.am
KKFileManager/debug/: Makefile.am
KKFileManager/resources/man/: kkfilemanager.1
KKFileManager/resources/pixmaps/: KKFileManager.desktop
KKFileManager/resources/scripts/: SetMissingLinks
KKFileManager/src/: callbacks.cpp  callbacks.h  connect.cpp  connect.h  dialogs.cpp  dialogs.h  filenamedialog.cpp  filenamedialog.h  files.cpp  files.h  globals.cpp  globals.h  gui.cpp  gui.h  history.cpp  history.h  internet.cpp  internet.h  main.cpp  mimetype.cpp  mimetype.h  pages.cpp  pages.h  prefs.cpp  prefs.h  properties.cpp  properties.h  toolbar.cpp  toolbar.h
configfiles/: askfilename  prefsconfig
configfiles/askfiilename/: askfilename  globals.h
configfiles/connect/: connect.conf  globals.h
configfiles/props/: globals.h  properties.cpp  properties.h  props.cpp  propsconf
